@@ -239,6 +239,31 @@ def test_from_wkt_empty(wkt):
     assert shapely.to_wkt(geom) == wkt
 
 
+# WKT from https://github.com/libgeos/geos/blob/main/tests/unit/io/WKBReaderTest.cpp
+@pytest.mark.parametrize(
+    "wkt",
+    (
+        "CIRCULARSTRING(1 3,2 4,3 1)",
+        "COMPOUNDCURVE(CIRCULARSTRING(1 3,2 4,3 1),(3 1,0 0))",
+        "CURVEPOLYGON(COMPOUNDCURVE(CIRCULARSTRING(0 0,2 0,2 1,2 3,4 3),(4 3,4 5,1 4,0 0)),CIRCULARSTRING(1.7 1,1.4 0.4,1.6 0.4,1.6 0.5,1.7 1))",  # noqa: E501
+        "MULTICURVE((0 0,5 5),COMPOUNDCURVE((-1 -1,0 0),CIRCULARSTRING(0 0,1 1,2 0)),CIRCULARSTRING(4 0,4 4,8 4))",  # noqa: E501
+        "MULTISURFACE(CURVEPOLYGON(CIRCULARSTRING(0 0,4 0,4 4,0 4,0 0),(1 1,3 3,3 1,1 1)),((10 10,14 12,11 10,10 10),(11 11,11.5 11,11 11.5,11 11)))",  # noqa: E501
+    ),
+)
+def test_from_wkt_nonlinear_unsupported(wkt):
+    if shapely.geos_version >= (3, 13, 0):
+        with pytest.raises(
+            NotImplementedError,
+            match="Nonlinear geometry types are not currently supported",
+        ):
+            shapely.from_wkt(wkt)
+
+    else:
+        # prior to GEOS 3.13 nonlinear types were rejected by GEOS on read from WKT
+        with pytest.raises(shapely.errors.GEOSException, match="Unknown type"):
+            shapely.from_wkt(wkt)
+
+
 def test_from_wkb():
     expected = shapely.points(1, 1)
     actual = shapely.from_wkb(POINT11_WKB)
@@ -398,6 +423,36 @@ def test_from_wkb_empty(geom):
     assert shapely.is_geometry(geom).all()
     assert shapely.is_empty(geom).all()
     assert shapely.to_wkb(geom) == wkb
+
+
+# WKB from https://github.com/libgeos/geos/blob/main/tests/unit/io/WKBReaderTest.cpp
+@pytest.mark.parametrize(
+    "wkb",
+    (
+        # "CIRCULARSTRING(1 3,2 4,3 1)",
+        "010800000003000000000000000000F03F0000000000000840000000000000004000000000000010400000000000000840000000000000F03F",
+        # "COMPOUNDCURVE(CIRCULARSTRING(1 3,2 4,3 1),(3 1,0 0))",
+        "01090000200E16000002000000010800000003000000000000000000F03F0000000000000840000000000000004000000000000010400000000000000840000000000000F03F0102000000020000000000000000000840000000000000F03F00000000000000000000000000000000",
+        # "CURVEPOLYGON(COMPOUNDCURVE(CIRCULARSTRING(0 0,2 0,2 1,2 3,4 3),(4 3,4 5,1 4,0 0)),CIRCULARSTRING(1.7 1,1.4 0.4,1.6 0.4,1.6 0.5,1.7 1))",  # noqa: E501
+        "010A0000200E1600000200000001090000000200000001080000000500000000000000000000000000000000000000000000000000004000000000000000000000000000000040000000000000F03F00000000000000400000000000000840000000000000104000000000000008400102000000040000000000000000001040000000000000084000000000000010400000000000001440000000000000F03F000000000000104000000000000000000000000000000000010800000005000000333333333333FB3F000000000000F03F666666666666F63F9A9999999999D93F9A9999999999F93F9A9999999999D93F9A9999999999F93F000000000000E03F333333333333FB3F000000000000F03F",
+        # "MULTICURVE((0 0,5 5),COMPOUNDCURVE((-1 -1,0 0),CIRCULARSTRING(0 0,1 1,2 0)),CIRCULARSTRING(4 0,4 4,8 4))",  # noqa: E501
+        "010B000000030000000102000000020000000000000000000000000000000000000000000000000014400000000000001440010900000002000000010200000002000000000000000000F0BF000000000000F0BF0000000000000000000000000000000001080000000300000000000000000000000000000000000000000000000000F03F000000000000F03F00000000000000400000000000000000010800000003000000000000000000104000000000000000000000000000001040000000000000104000000000000020400000000000001040",
+        # "MULTISURFACE(CURVEPOLYGON(CIRCULARSTRING(0 0,4 0,4 4,0 4,0 0),(1 1,3 3,3 1,1 1)),((10 10,14 12,11 10,10 10),(11 11,11.5 11,11 11.5,11 11)))",  # noqa: E501
+        "010C00000002000000010A000000020000000108000000050000000000000000000000000000000000000000000000000010400000000000000000000000000000104000000000000010400000000000000000000000000000104000000000000000000000000000000000010200000004000000000000000000F03F000000000000F03F000000000000084000000000000008400000000000000840000000000000F03F000000000000F03F000000000000F03F01030000000200000004000000000000000000244000000000000024400000000000002C40000000000000284000000000000026400000000000002440000000000000244000000000000024400400000000000000000026400000000000002640000000000000274000000000000026400000000000002640000000000000274000000000000026400000000000002640",
+    ),
+)
+def test_from_wkb_nonlinear_unsupported(wkb):
+    if shapely.geos_version >= (3, 13, 0):
+        with pytest.raises(
+            NotImplementedError,
+            match="Nonlinear geometry types are not currently supported",
+        ):
+            shapely.from_wkb(wkb)
+
+    else:
+        # prior to GEOS 3.13 nonlinear types were rejected by GEOS on read from WKB
+        with pytest.raises(shapely.errors.GEOSException, match="Unknown WKB type"):
+            shapely.from_wkb(wkb)
 
 
 def test_to_wkt():
